--- a/css/bootstrap4-neon-glow.css
+++ b/css/bootstrap4-neon-glow.css
@@ -76,7 +76,7 @@ body {
 /*
  * color: #e4e2ff;
   */
- color: white;
+color: #e4e2ff;
 text-align: left;
   background-color: #0c0d16; }
 
@@ -8359,7 +8359,9 @@ body {
   display: inline-block;
   height: 40px;
   width: 40px; }
-
+.logo{
+font-color: white !important;
+}
   .slogan{
 	  font-family: "slogan", "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 	  font-size: 2rem !important;
