--- a/css/bootstrap4-neon-glow.css
+++ b/css/bootstrap4-neon-glow.css
@@ -8359,9 +8359,9 @@ body {
   display: inline-block;
   height: 40px;
   width: 40px; }
-.logo{
-font-color: white !important;
-}
+  .logo{
+	  color: white !important;
+  }
   .slogan{
 	  font-family: "slogan", "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
 	  font-size: 2rem !important;
